--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "plugin:jest/recommended", "prettier"],
+  "extends": ["airbnb", "plugin:jest/recommended", "plugin:prettier/recommended"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
