--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react-donut",
+  "name": "react-svg-donut",
   "version": "0.1.0",
   "description": "A simple library to create donut charts with react",
-  "main": "build/index.js",
+  "main": "./build/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "build": "babel lib -d build",
-    "build-example": "webpack",
+    "build-example": "webpack --mode production",
+    "install": "npm run build",
     "lint": "eslint ./ --fix",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d examples/build"
   },
   "keywords": [
     "react",
