--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server --open --mode development",
     "build": "babel lib -d build",
     "build-example": "webpack --mode production",
-    "install": "npx babel lib -d build --presets env,react",
+    "publish-patch": "npm version patch && npm run build && npm publish",
+    "publish-minor": "npm version minor && npm run build && npm publish",
+    "publish-major": "npm version major && npm run build && npm publish",
     "lint": "eslint ./ --fix",
     "test": "jest",
     "deploy": "gh-pages -d examples/build"
@@ -45,13 +47,12 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "prettier": "^1.13.7",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
-  "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
-  }
+  "peerDependencies": {}
 }
