--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
-  "extends": ["airbnb", "plugin:jest/recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb",
+    "plugin:jest/recommended",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   },
   "env": {
     "browser": true
