--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   },
   "author": "hadeeb",
   "license": "MIT",
-  "dependencies": {
-    "prop-types": "^15.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -47,12 +45,14 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "prettier": "^1.13.7",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "prop-types": "^15.6.2",
     "react-test-renderer": "^16.4.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  }
 }
