--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "author": "hadeeb",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.2"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -45,7 +47,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "prettier": "^1.13.7",
-    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
